k8s/applications/radarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:5.21.1
          ports:
            - name: ingress
              containerPort: 7878
          volumeMounts:
            - name: radarr
              mountPath: /config
            - name: libraries
              mountPath: /movies
              subPath: movies/sd
            - name: libraries
              mountPath: /movies-requested
              subPath: movies/requested
            - name: applications
              mountPath: /trash
              subPath: trash
            - name: applications
              mountPath: /data
              subPath: qbittorrent
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 512Mi
      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
