k8s/applications/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.84
spec:
  type: LoadBalancer
  selector:
    app: radarr
  ports:
    - name: ingress
      port: 80
      targetPort: ingress
